--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   width:100%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position-x: 50%;
   font-size: 12px;
   color:#314992;
   margin: 0px auto 10px auto;
@@ -23,8 +24,15 @@
   flex: 1 100%;
 }
 
-.header {
-  background: tomato;
+.head-inner {
+ max-width: 250px;
+ -ms-word-break: break-all;
+ word-break: break-all;
+ word-break: break-word;
+-webkit-hyphens: auto;
+-moz-hyphens: auto;
+-ms-hyphens: auto;
+    hyphens: auto;
 }
 
 .footer {
@@ -43,6 +51,8 @@
 .heading {
   font-weight: 500;
   font-size: 16px;
+  width:240px;
+  max-width:240px;
 }
 .aside-1 {
   padding: 10px;
@@ -61,6 +71,10 @@
   text-align: right;
   font-weight: 200;
   font-size: 12px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .aside-2 p {
@@ -70,6 +84,7 @@
 
 .btn {
   margin:10px;
+  width:150px;
   -webkit-border-radius: 4;
   -moz-border-radius: 4;
   border-radius: 4px;
@@ -107,7 +122,9 @@
     outline:0;
   }
 
-@media all and (min-width: 600px) {
+.stars{ word-wrap: none; color:#f2d330;font-size:12px;}
+
+@media all and (min-width: 460px) {
   .aside { flex: 1 auto; 
     max-width: none;}
   
@@ -119,6 +136,10 @@
       border-left:solid 2px #286dba;
       max-width: 88px;
       width:100%;
+    }
+
+    .btn {
+      width:auto;
     }
 }
 
